thank you Tushar. Fully working blob tracking

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     Your browser does not support the canvas element.
 </canvas>
 
-<!-- <canvas id="conClickOutput" width="320" height="240"
+<canvas id="conClickOutput" width="320" height="240"
     style="border:1px solid #d3d3d3;">
     Your browser does not support the canvas element.
-</canvas> -->
+</canvas>
 
 <!-- <script>
   function onOpenCvReady() {
