--- a/index.html
+++ b/index.html
@@ -4,41 +4,36 @@
     <meta charset="utf-8" />
     <title>Gamedev Canvas Workshop</title>
     <style>
-        .center {
-          margin: auto;
-          width: 60%;
-          border: 3px solid #73AD21;
-          padding: 10px;
+        .box {
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
     </style>
 </head>
 <body>
-
-<style type="text/css">
-     
-</style>
 
 
 
 <!-- <canvas id="scoreCanvas" width="20" height="640"></canvas>
 <canvas id="gameCanvas" width="960" height="640"></canvas>
 <canvas id="timeCanvas" width="20" height="640"></canvas> -->
-<video id="videoInput" width="320" height="240" controls>
+<div class = box>
+<canvas id="canvasOutput">
+    Your browser does not support the canvas element.
+</canvas>
+</div>
+
+<div style="display: none; height: 10px;">
+<video id="videoInput"> <!--  width="320" height="240" controls> -->
   Your browser does not support the video tag.
 </video>
-<canvas id="videoCanvas" width="320" height="240"
-    style="border:1px solid #d3d3d3; ">
-    Your browser does not support the canvas element.
-</canvas>
-<canvas id="canvasOutput" width="320" height="240"
-    style="border:1px solid #d3d3d3;">
-    Your browser does not support the canvas element.
-</canvas>
+</div>
 
-<canvas id="conClickOutput" width="320" height="240"
+<!-- <canvas id="conClickOutput" width="320" height="240"
     style="border:1px solid #d3d3d3;">
     Your browser does not support the canvas element.
-</canvas>
+</canvas> -->
 
 <!-- <script>
   function onOpenCvReady() {
