--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
 </head>
 <body>
 
-
-
 <!-- <canvas id="scoreCanvas" width="20" height="640"></canvas>
 <canvas id="gameCanvas" width="960" height="640"></canvas>
 <canvas id="timeCanvas" width="20" height="640"></canvas> -->
 <div class = box>
-<canvas id="canvasOutput">
+<canvas id="leftCanvas" width="200" height="480"
+style="border:1px solid #d3d3d3; float:left">
+Your browser does not support the canvas element.
+</canvas>
+<canvas id="canvasOutput" style="z-index:1">
     Your browser does not support the canvas element.
+</canvas>
+
+<canvas id="rightCanvas" width="200" height="480"
+style="border:1px solid #d3d3d3; float:left">
+Your browser does not support the canvas element.
 </canvas>
 </div>
 
